# vtk_qt_test

./: CMakeLists.txt  Readme.md  main.cpp
build_debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  interview_project.sln  interview_project.vcxproj  interview_project.vcxproj.filters  vtk_qt_test.sln  vtk_qt_test.vcxproj  vtk_qt_test.vcxproj.filters
build_debug/interview_project.dir/Debug/: interview_project.exe.recipe  interview_project.ilk
build_debug/interview_project.dir/Debug/intervie.09C1BC41.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  interview_project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_debug/interview_project_autogen/include_Debug/6YEA5652QU/: moc_SliceInteract.cpp
build_debug/vtk_qt_test.dir/Debug/: vtk_qt_test.exe.recipe  vtk_qt_test.ilk
build_debug/vtk_qt_test.dir/Debug/vtk_qt_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_debug/vtk_qt_test_autogen/: mocs_compilation_Debug.cpp
build_debug/vtk_qt_test_autogen/include_Debug/6YEA5652QU/: moc_DICOMThread.cpp  moc_MainWindow.cpp
build_debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
include/: DICOMThread.h  MainWindow.h  SliceInteract.h
src/: DICOMThread.cpp  MainWindow.cpp  SliceInteract.cpp
(+6 files in other folders)
